210825|패캠 Node 올인원 06.03
06.Crawling
  03_puppeteer1

--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/06_Crawling/src/package.json
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/06_Crawling/src/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "mycrawl",
+  "name": "testing_ex",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "npx nodemon server.js"
+    "start": "nodemon -e js,html server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.10",
-    "express": "^4.17.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "dotenv": "^8.0.0",
+    "express": "^4.15.3",
+    "moment": "^2.24.0",
+    "morgan": "^1.8.2",
+    "mysql2": "^1.6.5",
+    "nunjucks": "^3.2.0",
+    "sequelize": "^4.42.0"
+  },
+  "devDependencies": {
+    "puppeteer": "^4.0.0"
   }
 }
