211008|패캠 Node 올인원 09_05
09.Docker
  05_서비스 배포

--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/09_Docker/src/docker-compose.yml
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/09_Docker/src/docker-compose.yml
@@ -6,6 +6,8 @@ services:
   db:
     build: ./mysql
     restart: always
+    volumes:
+      - ./data:/val/lib/mysql
 
   adminer:
     image: adminer
